--- a/kadai_022/style.css
+++ b/kadai_022/style.css
@@ -69,4 +69,12 @@ p {
     font-size: 25px;
 }
 }
-    
+a {
+    color: rgb(255, 255, 255);
+}    
+a:visited {
+    color: rgb(193, 234, 251);
+}
+a:hover {
+    color: rgb(245, 178, 168);
+}    
